[package]
name = "imgproc-rs"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "Image processing library for Rust"
authors = ["Tiffany Chieu <tiffany9342@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tiffany1618/imgproc-rs"
homepage = "https://github.com/tiffany1618/imgproc-rs"
documentation = "https://docs.rs/imgproc-rs"
exclude = [
    "tests/*",
    "images/*"
]
keywords = ["image", "image-processing"]
categories = ["multimedia::images"]

[dependencies]
image = "0.23.12"
rulinalg = "0.4.2"
rayon = "1.5.0"
arrayfire = "3.8.0"