[package]
name = "imgproc-rs"
version = "0.2.2"
edition = "2018"
license = "MIT"
description = "Image processing library for Rust"
authors = ["Tiffany Chieu <tiffany9342@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tiffany1618/imgproc-rs"
homepage = "https://github.com/tiffany1618/imgproc-rs"
documentation = "https://docs.rs/imgproc-rs"
exclude = [
    "tests/*",
    "images/*"
]
keywords = ["image", "image-processing"]
categories = ["multimedia::images"]

[dependencies]
image = "0.23.12"
rayon = { version = "1.5.0", optional = true }
rulinalg = "0.4.2"

[features]
# Enables multithreading
parallel = ["rayon"]